fixed bugs on IE;published fixed3

--- a/src/skin/css/wan/style.less
+++ b/src/skin/css/wan/style.less
@@ -74,6 +74,10 @@
     .h-fil{height: 100%;}
     .tc{text-align: center;}
     .ib{display: inline-block;*display: inline;*zoom:1;}
+    .far{
+        position: absolute;
+        left: -10000px;
+    }
     .sogou-passport-caption{
         .sogou-passport-close{
             right: 0;
